<resources>
    <string name="app_name">MyAndroid</string>
    <string name="my_first_application">My first application</string>
    <string name="lesson1">Lesson 1</string>
    <string name="lesson2">Lesson 2</string>
    <string name="lesson3">Lesson 3</string>
    <string name="lesson4">Lesson 4</string>
    <string name="lesson5">Lesson 5</string>
    <string name="lesson6">Lesson 6</string>
    <string name="lesson7">Lesson 7</string>
    <string name="show_flags">Show Flags</string>
    <string name="show_animation">Show Animation</string>
    <string name="lesson3_confirmed">Confirmed</string>
    <string name="lesson3_recovered">Recovered</string>
    <string name="lesson3_dead">Dead</string>
    <string name="lesson3_refresh_data">Refresh Data</string>
    <string name="lesson3_add_confirmed">+ 1 confirmed</string>
    <string name="lesson3_add_recovered">+ 1 recovered</string>
    <string name="lesson3_add_dead">+ 1 dead</string>
    <string name="lesson3_count_default">0</string>
    <string name="lesson4_add_top">Add top</string>
    <string name="lesson4_add_bottom">Add Bottom</string>
    <string name="lesson4_add_flower">Add Flower</string>
    <string name="lesson4_remove_top">Remove top</string>
    <string name="lesson4_remove_bottom">Remove bottom</string>
    <string name="lesson4_url_image">URL Image</string>
    <string name="lesson4_name">Name</string>
    <string name="lesson4_add">ADD</string>
    <string name="lesson4_price">Price</string>
    <string name="lesson4_add_complete">Add complete</string>
    <string name="lesson4_add_failed">Add failed</string>
    <string name="lesson4_add_fragment_failed">Flower is not add</string>
    <string name="lesson4_delete_fragment_failed">Fragment is not add</string>
    <string name="lesson4_count">Count:</string>
    <string name="lesson5_title">List of products:</string>
    <string name="lesson5_name">Name</string>
    <string name="lesson5_price">Price</string>
    <string name="lesson6_read">Read</string>
    <string name="lesson6_write">Write</string>
    <string name="lesson7_currency_rate_title">Currency Rates</string>
    <string name="title_activity_main2">Main2Activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
