<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".lesson4.Lesson4Activity">

    <FrameLayout
        android:id="@+id/topFragmentLesson4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/bottomFragmentLesson4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/topFragmentLesson4" />

    <Button
        android:id="@+id/addTopFragmentLesson4"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:text="@string/lesson4_add_top"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/addBottomFragmentLesson4"/>

    <Button
        android:id="@+id/addBottomFragmentLesson4"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:text="@string/lesson4_add_bottom"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/addFlowerLesson4"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:text="@string/lesson4_add_flower"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/removeBottomFragmentLesson4"
        app:layout_constraintLeft_toRightOf="@+id/addBottomFragmentLesson4" />

    <Button
        android:id="@+id/removeTopFragmentLesson4"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:text="@string/lesson4_remove_top"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/removeBottomFragmentLesson4"/>

    <Button
        android:id="@+id/removeBottomFragmentLesson4"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:text="@string/lesson4_remove_bottom"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/countLesson4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/addFlowerLesson4"
        app:layout_constraintEnd_toStartOf="@+id/removeTopFragmentLesson4"
        app:layout_constraintStart_toEndOf="@+id/addTopFragmentLesson4"
        app:layout_constraintTop_toTopOf="@+id/addTopFragmentLesson4" />

</androidx.constraintlayout.widget.ConstraintLayout>